--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ RUN /rocker_scripts/install_julia.sh
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libxt-dev
 
-# Create directories for cache of packages, set permissions and install packages
+# Create directories for cache of packages and set permissions
 RUN cd /home/rstudio && mkdir .pip .cache .cache/R .cache/R/renv .TinyTeX .julia && \
     chown rstudio:rstudio .pip .cache .cache/R .cache/R/renv .TinyTeX .julia
 
