--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,32 +1,33 @@
 {
-    "name": "${localWorkspaceFolderBasename}",
-    "dockerComposeFile": [
-        "docker-compose.yml"
-    ],
-    "service": "rstudio",
-    "workspaceFolder": "/home/rstudio/${localWorkspaceFolderBasename}",
-    "forwardPorts": [
-        8080,
-        8787
-    ],
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "REditorSupport.r",
-                "ms-python.python",
-                "julialang.language-julia",
-                "sas.sas-lsp",
-                "janisdd.vscode-edit-csv",
-                "quarto.quarto",
-                "james-yu.latex-workshop"
-            ],
-            "settings": {
-                "r.libPaths": [
-                    "/usr/local/lib/R/site-library"
-                ]
-            }
-        }
-    },
-    "initializeCommand": "/bin/bash .devcontainer/create-volumes.sh; if [ ! -e .devcontainer/.env ]; then echo LOCAL_WORKSPACE_FOLDER_BASENAME=${localWorkspaceFolderBasename} > .devcontainer/.env; fi",
-    "remoteUser": "rstudio"
+  "name": "${localWorkspaceFolderBasename}",
+  "dockerComposeFile": [
+    "docker-compose.yml"
+  ],
+  "service": "rstudio",
+  "workspaceFolder": "/home/rstudio/${localWorkspaceFolderBasename}",
+  "forwardPorts": [
+    8080,
+    8787
+  ],
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "editorconfig.editorconfig",
+        "REditorSupport.r",
+        "ms-python.python",
+        "julialang.language-julia",
+        "sas.sas-lsp",
+        "janisdd.vscode-edit-csv",
+        "quarto.quarto",
+        "james-yu.latex-workshop"
+      ],
+      "settings": {
+        "r.libPaths": [
+          "/usr/local/lib/R/site-library"
+        ]
+      }
+    }
+  },
+  "initializeCommand": "/bin/bash .devcontainer/create-volumes.sh; if [ ! -e .devcontainer/.env ]; then echo LOCAL_WORKSPACE_FOLDER_BASENAME=${localWorkspaceFolderBasename} > .devcontainer/.env; fi",
+  "remoteUser": "rstudio"
 }
