--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "${localWorkspaceFolderBasename}",
   "dockerComposeFile": [
-    "docker-compose.yml"
+    "compose.yaml"
   ],
   "service": "rstudio",
   "workspaceFolder": "/home/rstudio/${localWorkspaceFolderBasename}",
