--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,5 +27,6 @@
     }
   },
   "initializeCommand": "/bin/bash .devcontainer/initialize.sh; if [ ! -e .devcontainer/.env ]; then echo LOCAL_WORKSPACE_FOLDER_BASENAME=${localWorkspaceFolderBasename} > .devcontainer/.env; fi",
+  "postCreateCommand": "/bin/bash .devcontainer/postcreate.sh",
   "remoteUser": "rstudio"
 }
